# safeshot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml
_manifest/: implementation_plan.md  plan_01.mdx
public/: manifest.json  robots.txt  sitemap.xml
rust-wasm/: Cargo.toml
rust-wasm/benches/: benchmark.rs
rust-wasm/src/: lib.rs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: FAQ.tsx  Footer.tsx  Header.tsx  HowItWorks.tsx  ImageCard.tsx  MetadataViewer.tsx  PrivacyModal.tsx  UploadZone.tsx
src/hooks/: useTheme.ts
src/lib/: config.ts  file-utils.ts  wasm-loader.ts
src/types/: index.ts
test-images/: README.md
