[package]
name = "safeshot-wasm"
version = "0.1.0"
edition = "2021"
authors = ["shihweilo"]
description = "EXIF metadata stripper for safeshot.app - runs in browser via WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Image segments processing (for stripping without re-encoding)
img-parts = "0.3"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }

# EXIF parsing
kamadak-exif = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Better panic messages in debug
console_error_panic_hook = { version = "0.1", optional = true }

# WASM-specific allocator for smaller binary size
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
